--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
@@ -44,7 +44,7 @@
                         <th pSortableColumn="reviewDate" style="width:200px">Review Date <p-sortIcon field="reviewDate"></p-sortIcon></th>
                         <th pSortableColumn="status" style="width:200px">Status <p-sortIcon field="status"></p-sortIcon></th>
                         <th pSortableColumn="version" style="width:200px">Version <p-sortIcon field="version"></p-sortIcon></th>                        
-                        <th style="width:80px">Modify</th>
+                        <th style="width:80px">Actions</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-revision let-i="rowIndex">
