--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -32,7 +32,7 @@
                      maxlength="150"
                      />
               <div *ngIf="documentTypeInput.invalid && (documentTypeInput.dirty || documentTypeInput.touched)" class="text-danger">
-                Enter Document Type
+                Enter Document Type.
               </div>
             </div>
           </div>
@@ -54,21 +54,24 @@
                      #prefixInput="ngModel"
                       />
                       <div *ngIf="prefixInput.invalid && (prefixInput.dirty || prefixInput.touched)" class="text-danger">
-                        Enter Document Type Prefix
+                        Enter Document Type Prefix.
         
                       </div>
             </div>
           </div>
           <div class="form-group row">
-            <label for="description" class="col-sm-2 col-form-label">Description  </label>
+            <label for="description" class="col-sm-2 col-form-label">Description<span style="color: red; font-weight: bolder;">*</span>  </label>
             <div class="col-sm-10">
               <textarea class="form-control"
                         id="description"
                         name="Enter Description"
                         rows="3"
                         placeholder="Description"
-                        [(ngModel)]="documentType.Description" [disabled]="viewMode">                     
-                      </textarea>                      
+                        [(ngModel)]="documentType.Description" [disabled]="viewMode" required #DesInput="ngModel" >
+                      </textarea>    
+                      <div *ngIf="DesInput.invalid && (DesInput.dirty || DesInput.touched)" class="text-danger">
+                        Enter Description.
+                      </div>                  
             </div>
           </div> 
           <div class="form-group row">
@@ -80,7 +83,7 @@
                                #departmentInput="ngModel" [required]="true"  [disabled]="viewMode">
                 </p-multiSelect>
                 <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
-                  Select Department
+                  Select Department.
                  </div>
               </div>
             </div>
