--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -27,7 +27,7 @@
                 #DocumenttypeInput="ngModel" placeholder="Select Document Type" (onChange)="onChange()">
               </p-dropdown>
               <div *ngIf="DocumenttypeInput.invalid && (DocumenttypeInput.dirty || DocumenttypeInput.touched)" class="text-danger">
-                Document Type is required
+                Document Type is Required.
               </div>
             </div>
           </div>
@@ -65,11 +65,17 @@
           </div>
 
           <div class="form-group row">
-            <label for="purpose" class="col-sm-2 col-form-label">Purpose</label>
+            <label for="purpose" class="col-sm-2 col-form-label">Purpose<span
+              style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <textarea class="form-control mw-350" id="purpose" name="purpose" rows="3" placeholder="Purpose"
-                [(ngModel)]="request.purpose" [disabled]="viewMode"></textarea>
+                [(ngModel)]="request.purpose" [disabled]="viewMode" required #purposeInput="ngModel">
+              </textarea>
+              <div *ngIf="purposeInput.invalid && (purposeInput.dirty || purposeInput.touched)" class="text-danger">
+                Give Your Purpose.
+             </div>
             </div>
+           
           </div>
 
           <div class="form-group row">
@@ -81,7 +87,7 @@
                 [autoDisplayFirst]="false" #WorkFlowInput="ngModel" placeholder="Select Workflow">
               </p-dropdown>
               <div *ngIf="WorkFlowInput.invalid && (WorkFlowInput.dirty || WorkFlowInput.touched)" class="text-danger">
-                Workflow is required
+                Workflow is required.
               </div>
             </div>
           </div>
