--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="saveEffective()">
+      <form (ngSubmit)="saveEffective()" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
           
 
@@ -35,7 +35,7 @@
 
           <div class="form-group row" >
             <label for="documentNumber" class="col-sm-2 col-form-label"
-              >Document Number</label
+              >Document No</label
             >
             <div class="col-sm-10">
               <input
@@ -49,7 +49,6 @@
               />
             </div>
           </div>
-
 
           <div class="form-group row">
             <label for="docType" class="col-sm-2 col-form-label"
@@ -103,9 +102,14 @@
               id="effectiveDate"
               name="effectiveDate"
               placeholder="Effective Date"
-              [(ngModel)]="effective.effectiveDate" [disabled]="viewMode"
+              [(ngModel)]="effective.effectiveDate" [disabled]="viewMode" required #effectiveDateInput="ngModel"
             />
+            <div *ngIf="effectiveDateInput.invalid && (effectiveDateInput.dirty || effectiveDateInput.touched)"
+            class="text-danger">
+            Effective Date is required.
+          </div>
             </div>
+            
           </div>
 
           <div class="form-group row">
@@ -178,7 +182,7 @@
             >
               Cancel
             </button>
-            <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="isButtonDisabled">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid || isButtonDisabled">Submit</button>
            
             <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
           <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button> -->
