--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
@@ -40,7 +40,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Document Number</label>
+            <label for="documentType" class="col-sm-2 col-form-label">Document No</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="dnumber" name="Dnumber" placeholder="Document Number"
                 [(ngModel)]="revision.documentno" disabled="viewMode"/>
