--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
@@ -16,7 +16,7 @@
                       <span class="input-group-text custom-input-group-text">
                           <i class="fas fa-search custom-search-icon"></i>
                       </span>
-                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
+                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="49">
                   </div>
                     
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDepartment()" *ngIf="access">New</button>
@@ -28,7 +28,7 @@
       <div class="col">
           <div class="p-4 bg-white shadow-dark rounded-2">
             <p-table #templatesTable [value]="types" 
-            [globalFilterFields]="['DepartmentName', 'DepartmentCode', 'Description','RegisteredBy']"
+            [globalFilterFields]="['DepartmentName', 'DepartmentCode', 'Comments','ModifiedBy','ModifiedDate']"
             tableStyleClass="table table-striped" [rows]="itemsPerPage"
                 [paginator]="true" [totalRecords]="types.length"
                 [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
@@ -37,9 +37,9 @@
                   <th>S.No</th>
                   <th pSortableColumn="DepartmentName" style="width:20%">Department Name<p-sortIcon field="Department Name"></p-sortIcon></th>
                   <th pSortableColumn="DepartmentCode" style="width:10%">Department Code<p-sortIcon field="Department Code"></p-sortIcon> </th>
-                  <th pSortableColumn="Description" style="width:15%">Comments<p-sortIcon field="Comments"></p-sortIcon></th>
-                  <th pSortableColumn="RegisteredBy" style="width:20%">Registered by<p-sortIcon field="Registered by"></p-sortIcon></th>
-                  <th pSortableColumn="RegisteredOn" style="width:1n00px">Registered On <p-sortIcon field="Registered On"></p-sortIcon></th>
+                  <th pSortableColumn="Comments" style="width:15%">Comments<p-sortIcon field="Comments"></p-sortIcon></th>
+                  <th pSortableColumn="ModifiedBy" style="width:20%">Registered By<p-sortIcon field="ModifiedBy"></p-sortIcon></th>
+                  <th pSortableColumn="ModifiedDate" style="width:1n00px">Registered On <p-sortIcon field="ModifiedDate"></p-sortIcon></th>
                   <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th>
                   <th>Modify</th>
                 </tr>
@@ -51,9 +51,9 @@
                   <td>{{doc?.DepartmentCode }}</td>
                   <td>{{doc?.Comments}}</td>
                   <td>{{doc?.ModifiedBy}}</td>
-                  <td>{{doc?.ModifiedDate | date }}</td>
+                  <td>{{doc?.ModifiedDate | date :'dd/MM/yyyy'}}</td>
                   <td><span class="status" [ngClass]="{'status-completed':true}">Active</span></td>
-                  <td class="text-right" (click)="editBrand(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
+                  <td class="text-center" (click)="editBrand(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
                   <td class="text-center" *ngIf="!access">
                     <i class="bi bi-lock bi-lg" 
                     [ngClass]="{'text-primary':true}"
