--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.scss
@@ -1,7 +1,38 @@
 
-.form-control, .form-select {
+.form-control {
   max-width: 350px;
 }
 
+.p-multiselect-label {
+  display: block;
+  white-space: nowrap;
+  cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+// ::ng-deep p-multiselect.p-multiselect.chip .p-multiselect-label{
+//   display: flex;
+//   flex-wrap: wrap;
+//   white-space: nowrap;
+//   cursor: pointer;
+//   overflow: hidden;
+//   text-overflow: ellipsis;
+// }
+
+::ng-deep .p-multiselect-label-container {
+  overflow: hidden;
+  flex: 1 1 auto;
+  cursor: pointer;
+  min-height: 34px;
+}
 
 
+::ng-deep p-multiselect .p-multiselect-label{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+::ng-deep p-multiselect .p-multiselect-token{
+  margin-bottom: .5rem
+}
