--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -84,34 +84,217 @@
                       </div>
           </div>
         </div>
+        <div class="form-group row">
+          <label for="templateName" class="col-sm-2 col-form-label">Logo <span style="color: red; font-weight: bolder;">*</span></label>
+          <div class="col-sm-10">
+            <input type="file"
+                   class="form-control mw-350"
+                   id="logoUpload"
+                   [disabled]="editMode"   (change)="onLogoUpload($event)" accept="image/*"
+                   required
+                    
+                      />
+          </div>
+        </div>
       </div>
       </form>
       
+      <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
+        <h5 class="page-card-title">Title</h5> 
+        <div class="template-block">
+          <div class="template-grid">
+            <ng-container *ngIf="showGrid">
+              <table class="w-100">
+                <tbody>
+                  <tr *ngFor="let row of headerData; let rowIndex = index">
+                    <ng-container *ngFor="let cell of row; let colIndex = index">
+                      <td>
+                        <div class="template-cell">
+                          <div class="custom-select" style="width: 84px; padding-right: 2px;">
+                            <select class="select-dropdown form-select"
+                            [(ngModel)]="headerData[rowIndex][colIndex].selectedOption" 
+                            >
+                              <option *ngFor="let option of selectOptions"
+                                      [value]="option.value">
+                                {{ option.name }}
+                              </option>
+                            </select>
+                          </div>
+                          <!-- <input [(ngModel)]="
+                          headerData[rowIndex][colIndex].inputValue
+                            " [placeholder]="headerData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
+                                 class="form-control"
+                                 type="text" /> -->
+                                 <textarea class="form-control" style="height: 33px;" [(ngModel)]="headerData[rowIndex][colIndex].inputValue" 
+                                 [placeholder]="headerData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
+                                 ></textarea>
+                        </div>
+                      </td>
+                    </ng-container>
+                  </tr>
+                </tbody>
+              </table>
+            </ng-container>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
+        <h5 class="page-card-title">Header Template-(4 Col max.)</h5> 
+        <div class="template-block">
+          <div class="template-grid">
+            <ng-container *ngIf="showGrid">
+              <table class="w-100">
+                <tbody>
+                  <tr *ngFor="let row of gridData; let rowIndex = index">
+                    <ng-container *ngFor="let cell of row; let colIndex = index">
+                      <td>
+                        <div class="template-cell">
+                          <div class="custom-select" style="width: 84px;">
+                            <select class="select-dropdown form-select"
+                            [(ngModel)]="gridData[rowIndex][colIndex].selectedOption">
+                              <option *ngFor="let option of selectOptions"
+                                      [value]="option.value">
+                                {{ option.name }}
+                              </option>
+                            </select>
+                          </div>
+                          
+                           <p-dropdown
+                name="workflowStage"
+                [options]="stageSource"
+                [(ngModel)]="gridData[rowIndex][colIndex].inputValue"
+                optionLabel="label"
+                optionValue="label"
+                [required]="true"
+                [autoDisplayFirst]="false"
+                placeholder="Select Document Stage"
+                #documentstage="ngModel" width="5em">
+              </p-dropdown>
+           
+                        
+                        </div>
+                        
+                      </td>
+                    </ng-container>
+                    <td>
+                      <button class="btn btn-danger btn-sm delete-button"
+                              (click)="deleteRow(rowIndex)">
+                        Delete
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <button class="btn btn-primary mt-2" (click)="addNewRow()">
+                Add New Row
+              </button>
+            </ng-container>
+          </div>
+          <div class="template-actions">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">Rows</span>
+              <input type="number" max="10" class="form-control" [(ngModel)]="rows" />
+            </div>
+
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">Cols</span>
+              <input type="number" max="10" class="form-control" [(ngModel)]="cols" />
+            </div>
+
+            <button class="btn btn-default" (click)="generateTeplateGrid()">
+              <i class="bi bi-check2"></i>
+            </button>
+          </div>
+        </div>
+      </div> -->
+
+      <!-- <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
+        <h5 class="page-card-title">Footer Template-(4 Col max.)</h5>
+        <div class="template-block">
+          <div class="template-grid">
+            <ng-container *ngIf="showGrid">
+              <table class="w-100">
+                <tbody>
+                  <tr *ngFor="let row of gridFooterData; let rowIndex = index">
+                    <ng-container *ngFor="let cell of row; let colIndex = index">
+                      <td>
+                        <div class="template-cell">
+                          <div class="custom-select">
+                            <select class="select-dropdown form-select"
+                                    [(ngModel)]="
+                              gridFooterData[rowIndex][colIndex].selectedOption
+                              ">
+                              <option *ngFor="let option of selectOptions"
+                                      [value]="option.value">
+                                {{ option.name }}
+                              </option>
+                            </select>
+                          </div>
+                          <input [(ngModel)]="
+                            gridFooterData[rowIndex][colIndex].inputValue
+                            " [placeholder]="gridFooterData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
+                                 class="form-control"
+                                 type="text" />
+                        </div>
+                      </td>
+                    </ng-container>
+                    <td>
+                      <button class="btn btn-danger btn-sm delete-button"
+                              (click)="deletefooterRow(rowIndex)">
+                        Delete
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <button class="btn btn-primary mt-2" (click)="addfooterRow()">
+                Add New Row
+              </button>
+            </ng-container>
+          </div>
+          <div class="template-actions">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">Rows</span>
+              <input type="number" min="0" max="10" class="form-control" [(ngModel)]="footerRows" />
+            </div>
+
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">Cols</span>
+              <input type="number" min="0" max="10" class="form-control" [(ngModel)]="footerCols" />
+            </div>
+
+            <button class="btn btn-default" (click)="generateFooterGrid()">
+              <i class="bi bi-check2"></i>
+            </button>
+          </div>
+        </div>
+      </div> -->
+<!-- 
       <div class="p-4 mt-3 bg-white shadow-dark rounded-2"  *ngIf="!isbody">
         <h5 class="page-card-title">Header Template</h5> 
         <div class="template-block">
-          <!-- <div class="template-grid"> -->
+         
             <form [formGroup]="form1" id="idh">
               <div formControlName="html1" [ngxSummernote]="config" [(ngModel)]="pages[0].header">
               </div>
             </form> 
-          <!-- </div> -->
+          
         </div>
       </div>
 
       <div class="p-4 mt-3 bg-white shadow-dark rounded-2" *ngIf="!isbody">
         <h5 class="page-card-title">Footer Template</h5>
         <div class="template-block">
-          <!-- <div class="template-grid"> -->
+         
             <form [formGroup]="form2" id="idf">
               <div formControlName="html2" [ngxSummernote]="config" [(ngModel)]="pages[0].footer">
               </div>
             </form> 
-          <!-- </div> -->
+         
         
           
         </div>
-      </div>
+      </div> -->
       
      
 
