--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -121,22 +121,22 @@
             </div>
           </div>
 
-          <div class="form-group row" *ngIf="preparation.template!=null && preparation.template!=undefined && preparation.template!=''">
+          <!-- <div class="form-group row" *ngIf="preparation.template!=null && preparation.template!=undefined && preparation.template!=''">
             <label for="document" class="col-sm-2 col-form-label">Document<span
               style="color: red; font-weight: bolder;">*</span></label>
-            <!-- <div *ngIf="!preparation.document" class="col-sm-10">
+            <div *ngIf="!preparation.document" class="col-sm-10">
               <input class="form-control" type="file" id="fileInput" name="fileInput" #fileInput [disabled]="isUploaded"
                 (change)="onFileSelected($event)" [disabled]="viewMode" required>
-            </div> -->
+            </div> 
             
-            <div  class="col-sm-1">
+            <div  class="col-sm-1"  >
               <a class="link-opacity-100-hover" (click)="previewtemplate(template)">View Document</a>
-              <!-- <a class="link-opacity-100-hover" (click)="getTemplate()">View Document</a> -->
+             
             </div>
             <div *ngIf="preparation.document" class="col-sm-9">
               <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile()" [disabled]="viewMode">Delete</button>
             </div>
-          </div>
+          </div> -->
           <div *ngIf="selectedFile && !isUploaded" class="form-group row">
             <label for="document" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
