--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -86,14 +86,18 @@
         </div>
         <div class="form-group row">
           <label for="templateName" class="col-sm-2 col-form-label">Logo <span style="color: red; font-weight: bolder;">*</span></label>
-          <div class="col-sm-10">
-            <input type="file"
+          <div class="col-sm-10" *ngIf="templateForm.header==null || templateForm.header==''">
+            <input type="file"  
                    class="form-control mw-350"
-                   id="logoUpload"
-                   [disabled]="editMode"   (change)="onLogoUpload($event)" accept="image/*"
-                   required
+                   id="logoUpload" 
+                  (change)="onLogoUpload($event)" accept="image/*"
+                   required 
                     
                       />
+          </div>
+          <div *ngIf="templateForm.header" class="col-sm-9">
+            {{templateForm.header}}
+            <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile()">Delete</button>
           </div>
         </div>
       </div>
