--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Activate-deactivate-user/activate-deactivateuser.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Activate-deactivate-user/activate-deactivateuser.component.html
@@ -158,6 +158,16 @@
 
       }
 
+
+      
+      .p-paginator .p-dropdown {    
+      height: unset;
+    }
+
+    :host ::ng-deep .p-paginator .p-dropdown {    
+      height: unset;
+      min-width: unset;
+    }
   </style>
 
 
