--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
@@ -34,6 +34,7 @@
                      [(ngModel)]="addrole.Role" [disabled]="editMode"
                      required
                      #rolenameInput="ngModel"
+                     maxlength="49"
                      />
                      <div *ngIf="rolenameInput.invalid && (rolenameInput.dirty || rolenameInput.touched)" class="text-danger">
                       Role is required
@@ -75,7 +76,7 @@
 
         
           <div class="form-group row">
-            <label for="comments" class="col-sm-2 col-form-label">Comments</label>
+            <label for="comments" class="col-sm-2 col-form-label">Comments<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <textarea 
                      class="form-control"
@@ -85,7 +86,13 @@
                      placeholder="Comments please"
                      [(ngModel)]="addrole.Comments" [disabled]="viewMode"
                      maxlength="250"
-                     #commentsInput="ngModel" ></textarea>
+                     required
+                     #commentsInput="ngModel">
+                      
+                    </textarea>
+                    <div *ngIf="commentsInput.invalid && (commentsInput.dirty || commentsInput.touched)" class="text-danger">
+                      Comments Required
+                    </div>
                     
             </div>
           </div>
