--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
@@ -137,4 +137,13 @@
 
       }
 
+      .p-paginator .p-dropdown {    
+      height: unset;
+    }
+
+    :host ::ng-deep .p-paginator .p-dropdown {    
+      height: unset;
+      min-width: unset;
+    }
+
   </style>
