--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
@@ -121,7 +121,7 @@
           <div class="form-group row my-4"  *ngIf="access">
             <div class="col-sm-10 offset-sm-2">
               <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-              <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Submit</button>
+              <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Update</button>
               <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
             </div>
           </div>
@@ -137,3 +137,134 @@
     max-width: 350px;
   }
 </style>
+
+
+
+<div class="container-fluid" *ngIf="isFormSubmitted">
+  <div class="row p-2">
+      <div class="col">
+          <div class="d-flex justify-content-between align-items-center">
+            <h4 class="page-title flex-grow-1">Updated Security Mangement Values</h4>          
+              <div class="d-flex page-title-actions">             
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="row p-2">
+      <div class="col">
+          <div class="p-4 bg-white shadow-dark rounded-2">
+            <p-table [value]="types"           
+            tableStyleClass="table table-striped"
+            
+              >
+              <ng-template pTemplate="header">
+                <tr>
+                  <th>S.No</th>
+                  <th pSortableColumn="MinimumUserIdLength" style="width:20%">Minimum User Id Length<p-sortIcon field="MinimumUserIdLength"></p-sortIcon></th>
+                  <th pSortableColumn="MinimumPasswordLength" style="width:10%">Minimum Password Length<p-sortIcon field="MinimumPasswordLength"></p-sortIcon> </th>
+                  <th pSortableColumn="PasswordComplexity" style="width:15%">Password Complexity<p-sortIcon field="PasswordComplexity"></p-sortIcon></th>
+                  <th pSortableColumn="InvalidAttempts" style="width:20%">Invalid Attempts<p-sortIcon field="InvalidAttempts"></p-sortIcon></th>
+                  <th pSortableColumn="SessionTimeOut" style="width:1n00px">Session Time Out<p-sortIcon field="SessionTimeOut"></p-sortIcon></th>
+                  
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-SECURITY let-i="rowIndex">
+                <tr>
+                  <td>{{ i + 1 }}</td> 
+                  <td>{{SECURITY?.MinimumUserIdLength}}</td>
+                  <td>{{SECURITY?.MinimumPasswordLength}}</td>
+                  <td>{{SECURITY?.PasswordComplexity}}</td>
+                  <td>{{SECURITY?.InvalidAttempts}}</td>
+                  <td>{{SECURITY?.SessionTimeOut}}</td>
+                  
+                  
+                </tr>
+              </ng-template>
+            </p-table>
+          </div>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<style>
+
+  /* Styles for .custom-input-group */
+
+  .custom-input-group {
+
+      background-color: white;
+
+      display: flex;
+
+      align-items: center;
+
+      border: 1px solid #ccc;
+
+      border-radius: 5px;
+
+  }
+
+  .custom-input-group-text {
+
+          background: white;
+
+          border: none;
+
+          padding: 0;
+
+          vertical-align: middle;
+
+      }
+
+
+
+      .custom-search-icon {
+
+          font-size: 14px;
+
+          margin-right: 5px;
+
+          margin-left: 9px;
+
+          color: #555;
+
+      }
+
+
+
+      .custom-input {
+
+          border: none;
+
+          padding: 5px;
+
+          vertical-align: middle;
+
+          background-color: white;
+
+          box-shadow: none;
+
+      }
+
+  </style>
