--- a/richtext/src/app/app.component.html
+++ b/richtext/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div role="main">
 <h1>cKEditor</h1>
-<ckeditor [(ngModel)]="model.editorData" [editor]="Editor" [config]="config" (ready)="onReady($event)"
+<ckeditor [(ngModel)]="model.editorData" [editor]="Editor" (ready)="onReady($event)"
     (change)="onChange($event)"></ckeditor>
 
 </div>
