--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -302,29 +302,32 @@
       
      
 
-      <div *ngIf="isbody" class="p-4 mt-3 bg-white shadow-dark rounded-2">
+      <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
         <h5 class="page-card-title">Body Template</h5>
         <div class="template-block">
           <!-- <div class="template-grid"> -->
-           
-                <form [formGroup]="form" id="bodyid">
-                  <div formControlName="html" [ngxSummernote]="config" [(ngModel)]="pages[this.currentPage].text">
-                  </div>
-                </form>    
-        
-        <!-- </div> -->
-        <div class="form-group row my-4" > 
-          <!-- style="margin-left: 29.666667%;" -->
-        <div class="col-sm-10 offset-sm-2">
-        
-          <label for="templateName" class="col-sm-3 col-form-label">Page No. {{currentPage + 1}}/{{templateForm.Pages}}</label>
-          <button class="btn btn-primary" (click)="prevPage()">Previous</button>
-          <button type="button"
-          class="btn btn-outline-secondary mx-2" (click)="nextPage()">Next</button>
+
+          <form [formGroup]="form" id="bodyid">
+            <!--<div formControlName="html" [ngxSummernote]="config" [(ngModel)]="pages[this.currentPage].text">
+    </div>-->
+            <ckeditor formControlName="html" [(ngModel)]="pages[this.currentPage].text" [editor]="Editor" [config]="config"></ckeditor>
+          </form>
+          {{pages[this.currentPage].text}}
+          <!-- </div> -->
+          <div class="form-group row my-4">
+            <!-- style="margin-left: 29.666667%;" -->
+            <div class="col-sm-10 offset-sm-2">
+
+              <label for="templateName" class="col-sm-3 col-form-label">Page No. {{currentPage + 1}}/{{templateForm.Pages}}</label>
+              <button class="btn btn-primary" (click)="prevPage()">Previous</button>
+              <button type="button"
+                      class="btn btn-outline-secondary mx-2" (click)="nextPage()">
+                Next
+              </button>
+            </div>
+
+          </div>
         </div>
-    
-      </div>
-      </div>
     </div>
       
       <div class="form-group row my-4">
