--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -84,13 +84,13 @@
             />
             </div>
           </div>
-<!-- 
+
           <div class="form-group row">
             <label for="document" class="col-sm-2 col-form-label">Document</label>
             <div class="col-sm-10">
               <a class="link-opacity-100-hover" (click)="previewtemplate(template)">View Document</a>
             </div>
-          </div> -->
+          </div>
           
 
           <div class="form-group row">
